--- a/HTML_BasicCSS_Assessment/style.css
+++ b/HTML_BasicCSS_Assessment/style.css
@@ -9,20 +9,25 @@ body {
 
 h2 {
   text-align: left;
-  margin-top: 0em;
+  margin-top: 1mm;
+  margin-left: 1mm;
   color: white;
   font-size: 15px;
+  font-weight: bold;
 }
 
 h3 {
-  margin-top: 12em;
+  color: black;
+  margin-top: 2.5in;
   font-size: 12px;
   font-weight: 10;
 }
 
 h1 {
   color: white;
-  font-size: 50px
+  margin-top: .25in;
+  font-size: 64px;
+  font-weight: bold;
 }
 
 .button {
@@ -31,4 +36,5 @@ h1 {
   color: white;
   padding: 5px 5px;
   font-size: 12px;
+  margin-top: .25in;
 }
