--- a/CSS_Assessment/style.css
+++ b/CSS_Assessment/style.css
@@ -15,8 +15,8 @@
   }
 
   section {
-      padding-top: 240px;
-      padding-bottom: 240px;
+      padding-top: 20%;
+      padding-bottom: 20%;
   }
 
   #left {
