--- a/Module-1_Assessment/assets/css/style.css
+++ b/Module-1_Assessment/assets/css/style.css
@@ -22,3 +22,9 @@ body {
     margin-top: 5%;
     margin-bottom: 10%;
 }
+
+.logo {
+    background-color: #4aaaa5;
+    padding-left: 1.5%;
+    padding-top: 1.5%;
+}
